Adicionando camada de Service com sua dependency injection

--- a/apiPatternDDD.Service/apiPatternDDD.Service.csproj
+++ b/apiPatternDDD.Service/apiPatternDDD.Service.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\apiPatternDDD.Domain\apiPatternDDD.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
