--- a/apiPatternDDD/apiPatternDDD.Application.csproj
+++ b/apiPatternDDD/apiPatternDDD.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
       <PrivateAssets>all</PrivateAssets>
@@ -16,10 +17,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\apiPatternDDD.Domain\apiPatternDDD.Domain.csproj" />
+    <ProjectReference Include="..\apiPatternDDD.Infra.CrossCutting\apiPatternDDD.Infra.CrossCutting.csproj" />
     <ProjectReference Include="..\apiPatternDDD.Infra.Data\apiPatternDDD.Infra.Data.csproj" />
     <ProjectReference Include="..\apiPatternDDD.Service\apiPatternDDD.Service.csproj" />
   </ItemGroup>
